# vex_playground

./: .gitignore  README.md  pyproject.toml  setup-vex-sim.sh
examples/: bumper_wall_follower.py  colour_detect.exppython  colour_walker.py  drive_keyboard.py  drive_square.py  reach_goal.py
src/vex_sim/: __main__.py  controller_input.py  grader.py  playground_loader.py  playgrounds.py  render.py  runner.py  scenario.py  scheduler.py  sensors_world.py  stdout_capture.py  student_source.py  world.py
src/vex_sim/api/: __init__.py  _brain.py  _calllog.py  _clock.py  _controller.py  _drivetrain.py  _enums.py  _motor.py  _sensors.py
src/vex_sim/playground_files/: empty_room.json  low_wall_maze.json  mixed_heights.json  pickup_and_dropoff.json  playground.schema.json  sandbox.json  warehouse.json
tests/: empty.exppython  test_api_surface.py  test_brain.py  test_calllog.py  test_cli_scenario.py  test_clock.py  test_collisions.py  test_controller.py  test_controller_input.py  test_distance_mount_height.py  test_drivetrain.py  test_enums.py  test_exppython.py  test_floor_regions.py  test_grader.py  test_hud.py  test_motor.py  test_playground_loader.py  test_playgrounds.py  test_render.py  test_runner.py  test_scenario.py  test_scheduler.py  test_sensors.py  test_sensors_world.py  test_smoke.py  test_stdout_capture.py  test_wall_heights.py  test_world.py
tests/fixtures/: student_ball_collector.py
