[project]
name = "vex_sim"
version = "0.1.0"
description = "Headless simulator for VEX EXP Python student programs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "vex_sim contributors" }]
dependencies = ["greenlet>=3.0"]

[project.optional-dependencies]
render = ["pygame>=2.5"]

[project.scripts]
vex_sim = "vex_sim.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vex_sim"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "black>=24.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["tests/fixtures", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = "tests/fixtures|examples"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
